templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: <name>
  namespace: <namespace>
spec:
  ports:
  - name: <port-name>
    port: <port>
    targetPort: <container-port>
  selector:
    <key>: <value>
  type: <ClusterIP/NodePort/LoadBalancer>
